syntax = "proto3";

import "golem/common/promise_id.proto";
import "golem/common/shard_id.proto";
import "golem/common/template_id.proto";
import "golem/common/worker_id.proto";

package golem.common;


message WorkerExecutorError {
  oneof error {
    InvalidRequest invalid_request = 1;
    WorkerAlreadyExists worker_already_exists = 2;
    WorkerCreationFailed worker_creation_failed = 3;
    FailedToResumeWorker failed_to_resume_worker = 4;
    TemplateDownloadFailed template_download_failed = 5;
    TemplateParseFailed template_parse_failed = 6;
    GetLatestVersionOfTemplateFailed get_latest_version_of_template_failed = 7;
    PromiseNotFound promise_not_found = 8;
    PromiseDropped promise_dropped = 9;
    PromiseAlreadyCompleted promise_already_completed = 10;
    Interrupted interrupted = 11;
    ParamTypeMismatch param_type_mismatch = 12;
    NoValueInMessage no_value_in_message = 13;
    ValueMismatch value_mismatch = 14;
    UnexpectedOplogEntry unexpected_oplog_entry = 15;
    RuntimeError runtime_error = 16;
    InvalidShardId invalid_shard_id = 17;
    PreviousInvocationFailed previous_invocation_failed = 18;
    UnknownError unknown = 19;
    PreviousInvocationExited previous_invocation_exited = 20;
    InvalidAccount invalid_account = 21;
    WorkerNotFound worker_not_found = 22;
  }
}

message InvalidRequest {
  string details = 1;
}

message WorkerAlreadyExists {
  WorkerId worker_id = 1;
}

message WorkerCreationFailed {
  WorkerId worker_id = 1;
  string details = 2;
}

message FailedToResumeWorker {
  WorkerId worker_id = 1;
}

message TemplateDownloadFailed {
  TemplateId template_id = 1;
  int32 template_version = 2;
  string reason = 3;
}

message TemplateParseFailed {
  TemplateId template_id = 1;
  int32 template_version = 2;
  string reason = 3;
}

message GetLatestVersionOfTemplateFailed {
  TemplateId template_id = 1;
  string reason = 2;
}

message PromiseNotFound {
  PromiseId promise_id = 1;
}

message PromiseDropped {
  PromiseId promise_id = 1;
}

message PromiseAlreadyCompleted {
  PromiseId promise_id = 1;
}

message Interrupted {
  bool recover_immediately = 1;
}

message ParamTypeMismatch {}

message NoValueInMessage {}

message ValueMismatch {
  string details = 1;
}

message UnexpectedOplogEntry {
  string expected = 1;
  string got = 2;
}

message RuntimeError {
  string details = 1;
}

message InvalidShardId {
  ShardId shard_id = 1;
  repeated ShardId shard_ids = 2;
}

message PreviousInvocationFailed {}

message PreviousInvocationExited {}

message InvalidAccount {}

message UnknownError {
  string details = 1;
}

message WorkerNotFound {
  WorkerId worker_id = 1;
}
