syntax = "proto3";

package golem;

import "golem/error_body.proto";

message TokenError {
  oneof error {
    ErrorsBody badRequest = 1;
    ErrorBody unauthorized = 2;
    ErrorBody notFound = 4;
    ErrorBody internalError = 6;
  }
}
